# sonami

./: .gitignore  BACKEND_ROADMAP.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  ROADMAP.md  discord_test.rs  package-lock.json  package.json  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD  sonami.desktop
scripts/: version-bump.js
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/examples/: discord_test.rs
src-tauri/icons/: icon.icns
src-tauri/spotapi_local/: Cargo.toml  README.md
src-tauri/spotapi_local/examples/: fetch_playlist.rs  spotapi_search.rs
src-tauri/spotapi_local/src/: auth.rs  client.rs  hash_finder.rs  lib.rs  playlist.rs  utils.rs
src-tauri/src/: audio.rs  commands.rs  discord.rs  download.rs  dsp.rs  errors.rs  lib.rs  lyrics.rs  main.rs  media_controls.rs  playback_notifier.rs  playlist.rs  queue.rs
src-tauri/src/audio/: buffer.rs  decoder.rs  loader.rs  manager.rs  mod.rs  output.rs  resolver.rs  types.rs
src-tauri/src/audio/source/: file.rs  http.rs  mod.rs  prefetch.rs
src-tauri/src/commands/: download.rs  favorites.rs  history.rs  library.rs  playlist.rs  providers.rs  recommendations.rs  spotify.rs
src-tauri/src/database/: mod.rs  schema.sql
src-tauri/src/favorites/: mod.rs  models.rs
src-tauri/src/history/: mod.rs  models.rs
src-tauri/src/jellyfin/: mod.rs  models.rs  provider.rs
src-tauri/src/lyrics/: lrclib.rs  mod.rs  netease.rs
src-tauri/src/models/: mod.rs
src-tauri/src/playlist/: manager.rs  mod.rs  models.rs
src-tauri/src/providers/: manager.rs  mod.rs  traits.rs  types.rs
src-tauri/src/recommendations/: cache.rs  engine.rs  errors.rs  mod.rs  types.rs
src-tauri/src/spotify/: client.rs  mod.rs  models.rs  romanization.rs
src-tauri/src/subsonic/: mod.rs  models.rs  provider.rs
src-tauri/src/tidal/: client.rs  config.rs  endpoint_manager.rs  error.rs  mod.rs  models.rs  provider.rs
src/api/: favorites.ts  history.ts  library.ts  playlist.ts  providers.ts  spotify.ts
src/components/: ActionSheet.tsx  AlbumPage.tsx  ArtistPage.tsx  ContextMenu.tsx  CreatePlaylistModal.tsx  DeletePlaylistModal.tsx  DiscoverPage.tsx  DownloadIndicator.tsx  FullScreenView.tsx  HomeView.tsx  InputController.tsx  LibraryView.tsx  LikedSongsView.tsx  MainStage.tsx  MiniPlayerBar.tsx  MobileFullScreenPlayer.tsx  MobilePlayerBar.tsx  Modal.tsx  PlayerBar.tsx  PlaylistView.tsx  QueueSidebar.tsx  SearchPage.tsx  SearchPalette.tsx  Settings.tsx  Sidebar.tsx  SpotifyImportIndicator.tsx  SpotifyImportModal.tsx  SyncedLyrics.tsx  TidalSearch.tsx  TitleBar.tsx  Toast.tsx  UpdateNotificationModal.tsx  WelcomePage.tsx
src/components/Layout/: AppLayout.tsx
src/components/icons/: AppLogo.tsx
src/components/shared/: ImageWithFallback.tsx  TrackCarousel.tsx  TrackItem.tsx
src/context/: ContextMenuContext.tsx  DownloadContext.tsx  PlayerContext.tsx  SpotifyImportContext.tsx  ThemeContext.tsx
src/hooks/: queries.ts  useAudioEvents.ts  useData.ts  useIsMobile.ts  useKeyboardShortcuts.ts  useLongPress.ts  usePlaylistMenu.tsx  useSearch.ts  useTrackActions.ts
src/layouts/desktop/: DesktopLayout.tsx
src/layouts/mobile/: BottomNav.tsx  MobileLayout.tsx  MobileLibrary.tsx  MobileSettings.tsx  MobileTopBar.tsx
src/themes/: index.ts  types.ts
src/types/: recommendations.ts
src/utils/: Spring.ts  screenshot.ts  trackId.ts
