[package]
name = "sonami"
version = "0.1.1-alpha.4"
description = "A modern music player built with Tauri"
authors = ["z3r0"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/z3r0/sonami"
keywords = ["music", "player", "tauri", "audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonami_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
lofty = "0.22.4"
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4"] }

# Audio engine (direct control)
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
parking_lot = "0.12"  # Better mutexes
rubato = "0.16"       # High-quality sample rate conversion
crossbeam-channel = "0.5"  # Better channels for audio threads
rand = "0.9.2"

# OS Media Controls (MPRIS on Linux, SMTC on Windows)
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
chrono = "0.4.42"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
dirs = "6.0.0"
log = "0.4.29"
env_logger = "0.11"
tokio = { version = "1", features = ["sync"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
walkdir = "2.5.0"

