[package]
name = "sonami"
version = "0.1.11"
description = "A modern music player built with Tauri"
authors = ["RayZ3R0"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RayZ3R0/sonami"
keywords = ["music", "player", "tauri", "audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonami_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
lofty = "0.22.4"
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4"] }

# Audio engine (direct control)
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
parking_lot = "0.12"  # Better mutexes
rubato = "0.16"       # High-quality sample rate conversion
crossbeam-channel = "0.5"  # Better channels for audio threads
rand = "0.9.2"

chrono = "0.4.42"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "blocking", "stream", "rustls-tls"] }
futures-util = "0.3"
dirs = "6.0.0"
log = "0.4.29"
env_logger = "0.11"
tokio = { version = "1", features = ["sync"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
walkdir = "2.5.0"
spotapi = "0.2.3"
ib-romaji = "0.1.2"

async-trait = "0.1.89"
anyhow = "1.0.100"
urlencoding = "2.1.3"
md5 = "0.8.0"
hex = "0.4.3"
thiserror = "2.0.18"

# OS Media Controls (MPRIS on Linux, SMTC on Windows) - Desktop only
[target.'cfg(not(target_os = "android"))'.dependencies]
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
discord-rich-presence = "1.0"
tauri-plugin-screenshots = "2.2.0"

